Fix alignment of hero-section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
 }
 
 .hero-pic {
-    width: 500px;
+    width: 470px;
     height: auto;
 }
 
@@ -48,6 +48,9 @@ body .first-level-padding {
 .hero-section {
     background-color: #1F2937;
     display: flex;
+    align-items: center;
+    padding-bottom: 100px;
+    justify-content: space-between;
 }
 
 .hero-main-text {
